# Projet-Mario

./: CMakeLists.txt  README.md
Sources/: .nfs0000000001f9695e00000005  Makefile  game
Sources/include/: animation.h  bird.h  collision.h  constants.h  debug.h  explosion.h  graphics.h  list.h  map.h  map_objects.h  mario.h  missile.h  object.h  sound.h  sprite.h  timer.h  tnt.h
Sources/src/: animation.c  collision.c  debug.c  explosion.c  graphics.c  main.c  map.c  map_objects.c  mario.c  missile.c  object.c  sound.c  sprite.c  timer.c  tnt.c
cmake/: colors.cmake  summary.cmake
include/: bird.h  explosion.h  list.h  map.h  mario.h  object.h
maps/: demo_map  new_map  test
sources/include/: animation.h  collision.h  constants.h  cursor.h  dynamic_objects.h  error.h  explosion.h  graphics.h  map.h  map_objects.h  mario.h  missile.h  object.h  sprite.h  timer.h
sources/src/: animation.c  collision.c  cursor.c  debug.c  dynamic_objects.c  explosion.c  graphics.c  main.c  map.c  map_objects.c  mario.c  missile.c  object.c  sound.c  sprite.c  timer.c
src/: animation.c  graphics.c  mario.c
